--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "fisherman119",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
+    "react-router-dom": "^5.0.1"
+  }
 }
